# octui

./: Cargo.toml  LICENSE  Makefile  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
Formula/: octui.rb
src/: app.rs  contribution.rs  event.rs  github.rs  main.rs  ui.rs
