[package]
name = "octui"
version = "0.1.0"
edition = "2024"
description = "GitHub contribution graph in your terminal"
license = "MIT"
authors = ["abosnjakovic"]
repository = "https://github.com/abosnjakovic/octui"
homepage = "https://github.com/abosnjakovic/octui"
readme = "README.md"
keywords = ["github", "contributions", "tui", "terminal", "ratatui"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
anyhow = "1.0"
